--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pretest": "cross-env NODE_ENV=test npm run migrate:reset"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "cross-env": "^7.0.3",
     "jest": "^29.3.1",
     "supertest": "^6.3.1"
